# gid

./: .gitignore  Cargo.toml  README.md  build.rs
src/: main.rs
src/lists/: add.rs  mod.rs  remove.rs  show.rs
src/tasks/: add.rs  list.rs  mod.rs  remove.rs
